--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </h1>
           </div>
           <div class="flex">
-            <img src="img/icon-user.png" alt="Icon User" class="w-8">
+            <img src="img/icon-user.png" alt="Icon User" class="w-8 rounded-full h-8">
             <div class="">
               <h1 class="ms-1 font-bold">Username1</h1>
               <div class="bintang-rating flex">
@@ -225,7 +225,7 @@
             </h1>
           </div>
           <div class="flex">
-            <img src="img/icon-user.png" alt="Icon User" class="w-8">
+            <img src="img/icon-user.png" alt="Icon User" class="w-8 rounded-full h-8">
             <div class="">
               <h1 class="ms-1 font-bold">Username1</h1>
               <div class="bintang-rating flex">
@@ -266,7 +266,7 @@
             </h1>
           </div>
           <div class="flex">
-            <img src="img/icon-user.png" alt="Icon User" class="w-8">
+            <img src="img/icon-user.png" alt="Icon User" class="w-8 rounded-full h-8">
             <div class="">
               <h1 class="ms-1 font-bold">Username1</h1>
               <div class="bintang-rating flex">
