--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
 
       <div class="flex-col flex gap-y-8">
 
-        <div class="review-1 border rounded-lg p-4" data-aos="fade-up-right" data-aos-offset="25">
+        <div class="review-1 border rounded-lg p-4 items-center" data-aos="fade-up-right" data-aos-offset="25">
           <div class="mb-4">
             <h1 class="font-medium">
               "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, odit porro autem reprehenderit"
             </h1>
           </div>
           <div class="flex">
-            <img src="img/icon-user.png" alt="Icon User" class="w-8 rounded-full h-8">
+            <img src="img/icon-user.png" alt="Icon User" class="w-10 rounded-full h-10">
             <div class="">
               <h1 class="ms-1 font-bold">Username1</h1>
               <div class="bintang-rating flex">
@@ -218,14 +218,14 @@
           </div>
         </div>
 
-        <div class="review-1 border rounded-lg p-4" data-aos="fade-up-right" data-aos-offset="25">
+        <div class="review-1 border rounded-lg p-4 items-center" data-aos="fade-up-right" data-aos-offset="25">
           <div class="mb-4">
             <h1 class="font-medium">
               "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, odit porro autem reprehenderit"
             </h1>
           </div>
           <div class="flex">
-            <img src="img/icon-user.png" alt="Icon User" class="w-8 rounded-full h-8">
+            <img src="img/icon-user.png" alt="Icon User" class="w-10 rounded-full h-10">
             <div class="">
               <h1 class="ms-1 font-bold">Username1</h1>
               <div class="bintang-rating flex">
@@ -259,14 +259,14 @@
           </div>
         </div>
 
-        <div class="review-1 border rounded-lg p-4" data-aos="fade-up-right" data-aos-offset="25">
+        <div class="review-1 border rounded-lg p-4 items-center" data-aos="fade-up-right" data-aos-offset="25">
           <div class="mb-4">
             <h1 class="font-medium">
               "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, odit porro autem reprehenderit"
             </h1>
           </div>
           <div class="flex">
-            <img src="img/icon-user.png" alt="Icon User" class="w-8 rounded-full h-8">
+            <img src="img/icon-user.png" alt="Icon User" class="w-10 rounded-full h-10">
             <div class="">
               <h1 class="ms-1 font-bold">Username1</h1>
               <div class="bintang-rating flex">
