--- a/index.html
+++ b/index.html
@@ -63,25 +63,29 @@
     </nav>
 
 
-
-    <div id="home" class="h-screen w-full flex items-center justify-center !bg-[url(./img/background.png)] text-white bg-no-repeat bg-cover">
+    <div id="home"
+      class="h-screen w-full flex items-center justify-center !bg-[url(./img/background.png)] text-white bg-no-repeat bg-cover">
       <div class="container-banner text-center">
         <h1 class="text-2xl font-bold mb-6 px-6 pt-24 md:text-4xl">Desain Cerdas <br> Solusi Digital Berkualitas</h1>
-        <h2 class="text-base font-medium mx-12 mb-16 md:text-xl md:mx-16">Gunakan Jasa Kami Untuk Mendapatkan Bermacam Desain
+        <h2 class="text-base font-medium mx-12 mb-16 md:text-xl md:mx-16 xl:mx-64 lg:mx-32">Gunakan Jasa Kami Untuk
+          Mendapatkan Bermacam Desain
           Yang Keren
           Untuk Usaha Anda Agar Customer Anda Tertarik</h2>
         <div class="flex justify-center">
           <a href="#layanan-kami"
-            class="!bg-violet-700 border-white border font-medium text-base py-5 px-7 rounded-lg flex items-center gap-4 w-max md:text-lg">Lihat
-            Detail <img src="assets/icon/next.png" alt="Next Icon" class="w-5 h-5 invert brightness-0 animate-bounce md-arrow"></a>
+            class="!bg-violet-700 border-white border font-medium text-base py-4 px-6 rounded-lg flex items-center gap-4 w-max ">Lihat
+            Detail <img src="assets/icon/next.png" alt="Next Icon"
+              class="w-5 h-5 invert brightness-0 animate-bounce md-arrow"></a>
         </div>
       </div>
     </div>
+
+
     <br id="layanan-kami">
-    <div class="p-10 md:px-32">
+    <div class="p-10 md:px-32 xl:px-52">
       <h1 class="text-center font-bold text-3xl mb-3 md:text-4xl">Layanan Kami</h1>
       <h2 class="text-center font-medium text-base mb-10 md:text-xl">Layanan Jasa Yang kami Sediakan</h2>
-      <div class="container-product flex flex-col gap-y-14">
+      <div class="container-product grid grid-cols-1 gap-12 grid-cols-3-custom">
 
         <!-- PRODUCT 1 -->
         <div class="card-product bg-white rounded-xl border-2 border-blue-900 pb-8" data-aos="fade-up"
@@ -99,11 +103,69 @@
               guide</h1>
             <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Stationery
               mockup</h1>
-            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">File PNG, JPG, Vector
+            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">File PNG, JPG,
+              Vector
               (AI/PDF/SVG)</h1>
           </div>
-          <div class="btn-contact-admin flex justify-center px-12">
-            <a href="#" class="text-white font-semibold flex gap-3 bg-green-700 py-4 px-9 rounded-lg justify-center items-center"><img
+          <div class="btn-contact-admin flex justify-center mt-3">
+            <a href="#"
+              class="text-white font-semibold flex gap-3 text-base bg-green-700 py-4 px-5 rounded-lg justify-center items-center"><img
+                src="assets/icon/whatsapp-white.png" alt="Whatsapp Icon" class="w-5 h-5">Hubungi Admin</a>
+          </div>
+        </div>
+        <!-- CLOSE PRODUCT 1 -->
+
+        <!-- PRODUCT 1 -->
+        <div class="card-product bg-white rounded-xl border-2 border-blue-900 pb-8" data-aos="fade-up"
+          data-aos-offset="25">
+          <div class="container-name-product bg-blue-900 px-8 py-6 rounded-t-lg text-center text-white">
+            <h1 class="text-2xl"><b>Desain Logo</b></h1>
+          </div>
+          <div class="container-detail-product p-8 text-lg font-medium rounded-b-lg">
+            <h1 class="font-bold mb-3 text-lg">Detail :</h1>
+            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Desain 3
+              Konsep Awal</h1>
+            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Brand color
+              palette</h1>
+            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Typography
+              guide</h1>
+            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Stationery
+              mockup</h1>
+            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">File PNG, JPG,
+              Vector
+              (AI/PDF/SVG)</h1>
+          </div>
+          <div class="btn-contact-admin flex justify-center mt-3">
+            <a href="#"
+              class="text-white font-semibold flex gap-3 text-base bg-green-700 py-4 px-5 rounded-lg justify-center items-center"><img
+                src="assets/icon/whatsapp-white.png" alt="Whatsapp Icon" class="w-5 h-5">Hubungi Admin</a>
+          </div>
+        </div>
+        <!-- CLOSE PRODUCT 1 -->
+
+        <!-- PRODUCT 1 -->
+        <div class="card-product bg-white rounded-xl border-2 border-blue-900 pb-8" data-aos="fade-up"
+          data-aos-offset="25">
+          <div class="container-name-product bg-blue-900 px-8 py-6 rounded-t-lg text-center text-white">
+            <h1 class="text-2xl"><b>Desain Logo</b></h1>
+          </div>
+          <div class="container-detail-product p-8 text-lg font-medium rounded-b-lg">
+            <h1 class="font-bold mb-3 text-lg">Detail :</h1>
+            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Desain 3
+              Konsep Awal</h1>
+            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Brand color
+              palette</h1>
+            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Typography
+              guide</h1>
+            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Stationery
+              mockup</h1>
+            <h1 class="flex text-base"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">File PNG, JPG,
+              Vector
+              (AI/PDF/SVG)</h1>
+          </div>
+          <div class="btn-contact-admin flex justify-center mt-3">
+            <a href="#"
+              class="text-white font-semibold flex gap-3 text-base bg-green-700 py-4 px-5 rounded-lg justify-center items-center"><img
                 src="assets/icon/whatsapp-white.png" alt="Whatsapp Icon" class="w-5 h-5">Hubungi Admin</a>
           </div>
         </div>
@@ -111,30 +173,35 @@
 
       </div>
     </div>
+
+
     <br id="tentang-kami">
     <div class="px-10 py-20 !bg-[url(./img/background.png)] bg-no-repeat bg-cover bg-right md:px-24">
-      <div class="container-about-us text-white">
-        <h1 class="mb-8 font-bold text-3xl text-center md:text-4xl">Tentang Kami</h1>
-        <h1 class="text-base mb-8 md:text-xl" data-aos="fade-right" data-aos-offset="25"><span class="font-bold">Savana Digital
+      <h1 class="mb-12 font-bold text-3xl text-center md:text-4xl text-white">Tentang Kami</h1>
+      <div class="container-about-us text-white grid grid-cols-1 items-center justify-center lg:grid-cols-2">
+        <h1 class="text-base md:text-lg xl:ps-32" data-aos="fade-right" data-aos-offset="25"><span class="font-bold">Savana
+            Digital
             Studio</span> adalah
           perusahaan kreatif yang
           berfokus
           pada layanan desain
           grafis
           profesional dan branding visual untuk UMKM, startup, hingga perusahaan menengah. Kami
-          membantu klien membangun identitas visual yang kuat dan kehadiran online yang efektif.</h1>
-        <div class="grid grid-cols-2 gap-3 md:px-12">
-          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full" data-aos="fade-right" data-aos-offset="25">
-          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full" data-aos="fade-right" data-aos-offset="25">
-          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full" data-aos="fade-right" data-aos-offset="25">
-          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full" data-aos="fade-right" data-aos-offset="25">
+          membantu klien membangun identitas visual yang kuat dan kehadiran online yang efektif. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus eaque veniam maiores aliquam dolorem praesentium officiis modi repellendus fugit vitae odio enim, magnam ipsa impedit facere suscipit, et nobis nulla?</h1>
+        <div class="grid grid-cols-2 gap-3 md:px-12 xl:px-28">
+          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full rounded-bl-3xl rounded-tr-3xl" data-aos="fade-right" data-aos-offset="25">
+          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full rounded-br-3xl rounded-tl-3xl" data-aos="fade-right" data-aos-offset="25">
+          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full rounded-br-3xl rounded-tl-3xl" data-aos="fade-right" data-aos-offset="25">
+          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full rounded-bl-3xl rounded-tr-3xl" data-aos="fade-right" data-aos-offset="25">
         </div>
       </div>
     </div>
 
+
     <div class="p-10 pt-20">
       <h1 class="font-bold text-3xl mb-3 text-center md:text-4xl">Pendapat Mereka</h1>
-      <h2 class="font-medium text-base mb-10 text-center md:text-xl md:px-32">Pendapat Mereka Yang Sudah Menggunakan Layanan Jasa Kami</h2>
+      <h2 class="font-medium text-base mb-10 text-center md:text-xl md:px-32">Pendapat Mereka Yang Sudah Menggunakan
+        Layanan Jasa Kami</h2>
 
       <div class="flex-col flex gap-y-8 md:px-20">
 
@@ -178,16 +245,15 @@
             </div>
           </div>
         </div>
-
-
       </div>
-
     </div>
+
 
     <div class="px-10 py-20 md:px-32" id="kontak">
       <div class="appear-bottom-to-top">
         <h1 class="text-3xl font-bold text-center mb-4 md:text-4xl">Ada Pertanyaan?</h1>
-        <h1 class="text-base text-center font-medium mb-8 md:text-xl">Hubungi Kontak Admin Yang Tersedia Ada Di Bawah.</h1>
+        <h1 class="text-base text-center font-medium mb-8 md:text-xl">Hubungi Kontak Admin Yang Tersedia Ada Di Bawah.
+        </h1>
         <a href="#" class="rounded-3xl" data-aos="fade-left" data-aos-offset="25">
           <div class="container-telp border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img
               src="assets/icon/phone-call.png" alt="Phone Call" class="w-5 h-5"> (+62) 812-3456-7890</div>
@@ -197,12 +263,13 @@
               src="assets/icon/mail.png" alt="Phone Call" class="w-5 h-5"> hello@savanadigital.id</div>
         </a>
         <a href="#" class="rounded-3xl" data-aos="fade-left" data-aos-offset="25">
-          <div class="container-whatsapp border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img
-              src="assets/icon/whatsapp (1).png" alt="Phone Call" class="w-5 h-5"> 0812-3456-7890</div>
+          <div class="container-whatsapp border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-base md:text-lg">
+            <img src="assets/icon/whatsapp (1).png" alt="Phone Call" class="w-5 h-5"> 0812-3456-7890</div>
         </a>
         <a href="#" class="rounded-3xl" data-aos="fade-right" data-aos-offset="25">
-          <div class="container-address border-2 rounded-3xl p-4 flex gap-2 items-center text-base mb-10 md:text-lg"><img
-              src="assets/icon/location.png" alt="Phone Call" class="w-5 h-5"> Jl. Cendana No. 45, Bandung, Jawa Barat
+          <div class="container-address border-2 rounded-3xl p-4 flex gap-2 items-center text-base mb-10 md:text-lg">
+            <img src="assets/icon/location.png" alt="Phone Call" class="w-5 h-5"> Jl. Cendana No. 45, Bandung, Jawa
+            Barat
             40115</div>
         </a>
       </div>
@@ -210,19 +277,20 @@
       <div class="">
         <h1 class="text-3xl font-bold text-center mb-4">Sosial Media</h1>
         <a href="#" class="w-full" data-aos="fade-left" data-aos-offset="25">
-          <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img src="assets/icon/instagram.png"
-              alt="Instagram" class="w-6 h-6">@savanadigital</div>
+          <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img
+              src="assets/icon/instagram.png" alt="Instagram" class="w-6 h-6">@savanadigital</div>
         </a>
         <a href="#" class="w-full" data-aos="fade-right" data-aos-offset="25">
-          <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img src="assets/icon/tik-tok.png"
-              alt="Tiktok" class="w-6 h-6">@savanadigital</div>
+          <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img
+              src="assets/icon/tik-tok.png" alt="Tiktok" class="w-6 h-6">@savanadigital</div>
         </a>
         <a href="#" class="w-full" data-aos="fade-left" data-aos-offset="25">
-          <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img src="assets/icon/twitter.png"
-              alt="Twitter" class="w-6 h-6">@savanadigital</div>
+          <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img
+              src="assets/icon/twitter.png" alt="Twitter" class="w-6 h-6">@savanadigital</div>
         </a>
       </div>
     </div>
+
 
     <div class="p-10 !bg-violet-900 text-center">
       <h1 class="mb-1 text-lg font-bold text-white md:text-xl">SAVANA DIGITAL STUDIO</h1>
