--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
     <div id="home"
-      class="h-screen w-full flex items-center justify-center !bg-[url(./img/background.png)] text-white bg-no-repeat bg-cover">
+      class="h-screen w-full flex items-center justify-center !bg-[url(./img/background.webp)] text-white bg-no-repeat bg-cover">
       <div class="container-banner text-center">
         <h1 class="text-2xl font-bold mb-6 px-6 pt-24 md:text-4xl">Desain Cerdas <br> Solusi Digital Berkualitas</h1>
         <h2 class="text-base font-medium mx-12 mb-16 md:text-xl md:mx-16 xl:mx-64 lg:mx-32">Gunakan Jasa Kami Untuk
@@ -177,7 +177,7 @@
 
 
     <br id="tentang-kami">
-    <div class="px-12 py-20 !bg-[url(./img/background.png)] bg-no-repeat bg-cover bg-right md:px-28">
+    <div class="px-12 py-20 !bg-[url(./img/background.webp)] bg-no-repeat bg-cover bg-right md:px-28">
       <h1 class="mb-12 font-bold text-3xl text-center md:text-4xl text-white">Tentang Kami</h1>
       <div class="container-about-us text-white grid grid-cols-1 items-center justify-center gap-16 lg:grid-cols-2">
         <h1 class="text-base md:text-lg xl:ps-32" data-aos="fade-right" data-aos-offset="25"><span
