--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="description"
+    content="Savana Digital Studio menyediakan layanan desain grafis dan branding profesional untuk UMKM dan perusahaan.">
+  <meta name="keywords" content="jasa desain logo, branding UMKM, desain grafis bandung, digital agency">
+  <meta name="author" content="Savana Digital Studio">
+
   <title>Template Trino</title>
   <link rel="icon" href="img/logo.png">
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -16,6 +22,8 @@
       color: blue;
     }
   </style>
+
+
 </head>
 
 <body style="scroll-behavior: smooth;">
