--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
 <body style="scroll-behavior: smooth;">
   <div class="container-body">
 
-    <nav class="bg-white border-b border-gray-950 dark:bg-gray-900 fixed z-20 top-0 start-0 w-full">
+    <nav id="navbar"
+      class="bg-purple-900 md:bg-transparent fixed top-0 start-0 w-full z-50 transition-colors duration-300">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
           <img src="img/logo.png" class="h-8" alt="Savana Logo" />
-          <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">Savana Digital Studio</span>
+          <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">Savana Digital</span>
         </a>
         <button data-collapse-toggle="navbar-default" type="button"
-          class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+          class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-100 rounded-lg md:hidden"
           aria-controls="navbar-default" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
@@ -40,24 +41,23 @@
         </button>
         <div class="hidden w-full md:block md:w-auto" id="navbar-default">
           <ul
-            class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+            class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 border-t-white border-t-2">
             <li>
-              <a href="#home"
-                class="block py-2 px-3 text-gray-900 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+              <a href="#home" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:p-0"
                 aria-current="page">Home</a>
             </li>
             <li>
               <a href="#layanan-kami"
-                class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Layanan</a>
+                class="block py-2 px-3 text-white rounded-sm md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0  md:dark:hover:text-blue-500 ">Layanan</a>
             </li>
             <li>
               <a href="#tentang-kami"
-                class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tentang
+                class="block py-2 px-3 text-white rounded-sm md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0  md:dark:hover:text-blue-500 ">Tentang
                 Kami</a>
             </li>
             <li>
               <a href="#kontak"
-                class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Kontak</a>
+                class="block py-2 px-3 text-white rounded-sm md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500">Kontak</a>
             </li>
           </ul>
         </div>
@@ -75,9 +75,9 @@
           Untuk Usaha Anda Agar Customer Anda Tertarik</h2>
         <div class="flex justify-center">
           <a href="#layanan-kami"
-            class="!bg-violet-700 border-white border font-medium text-base py-4 px-6 rounded-lg flex items-center gap-2 w-max ">Lihat
+            class="!bg-transparent border-white border-2 text-white font-medium text-base py-4 px-8 rounded-full flex items-center gap-2 w-max ">Lihat
             Detail <img src="assets/icon/next.png" alt="Next Icon"
-              class="w-5 h-5 invert brightness-0 animate-bounce md-arrow md:p-1"></a>
+              class="w-5 h-5 animate-bounce invert brightness-0 md-arrow md:p-1"></a>
         </div>
       </div>
     </div>
@@ -421,6 +421,33 @@
         navMenu.classList.add('hidden');
       }
     });
+
+    const navbar = document.getElementById('navbar');
+
+    function isDesktop() {
+      // Cek apakah ukuran layar saat ini >= md (768px)
+      return window.innerWidth >= 768;
+    }
+
+    function handleNavbarScroll() {
+      if (isDesktop()) {
+        if (window.scrollY > 10) {
+          navbar.classList.remove('md:bg-transparent');
+          navbar.classList.add('md:bg-purple-900', 'shadow-lg');
+        } else {
+          navbar.classList.add('md:bg-transparent');
+          navbar.classList.remove('md:bg-purple-900', 'shadow-lg');
+        }
+      }
+    }
+
+    // Jalankan saat scroll
+    window.addEventListener('scroll', handleNavbarScroll);
+    // Jalankan saat pertama kali halaman dimuat
+    window.addEventListener('load', handleNavbarScroll);
+    // Jalankan saat resize layar
+    window.addEventListener('resize', handleNavbarScroll);
+
   </script>
 
 </body>
