--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body style="scroll-behavior: smooth;">
+<body style="scroll-behavior: smooth; overflow-x: hidden;">
   <div class="container-body">
 
     <nav id="navbar"
@@ -342,7 +342,7 @@
 
 
     <div class="px-10 py-20 md:px-32 lg:px-44 xl:px-64" id="kontak">
-      <div class="appear-bottom-to-top">
+      <div>
         <h1 class="text-3xl font-bold text-center mb-4 md:text-4xl">Ada Pertanyaan?</h1>
         <h1 class="text-base text-center font-medium mb-8 md:text-xl">Hubungi Kontak Admin Yang Tersedia Ada Di Bawah.
         </h1>
@@ -395,8 +395,6 @@
     </div>
 
   </div>
-
-
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
