ganti warna text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
           <img src="img/logo.png" class="h-8" alt="Savana Logo" />
-          <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">Savana Digital</span>
+          <span class="self-center text-lg font-semibold whitespace-nowrap text-white">Savana Digital</span>
         </a>
         <button data-collapse-toggle="navbar-default" type="button"
           class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-100 rounded-lg md:hidden"
