--- a/index.html
+++ b/index.html
@@ -17,12 +17,6 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 
-  <style>
-    .font-clr-blue {
-      color: blue;
-    }
-  </style>
-
 
 </head>
 
@@ -375,19 +369,21 @@
       </div>
 
       <div class="">
-        <h1 class="text-3xl font-bold text-center mb-4">Sosial Media</h1>
-        <a href="#" class="w-full" data-aos="fade-left" data-aos-offset="25">
-          <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img
-              src="assets/icon/instagram.png" alt="Instagram" class="w-6 h-6">@savanadigital</div>
-        </a>
-        <a href="#" class="w-full" data-aos="fade-right" data-aos-offset="25">
-          <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img
-              src="assets/icon/tik-tok.png" alt="Tiktok" class="w-6 h-6">@savanadigital</div>
-        </a>
-        <a href="#" class="w-full" data-aos="fade-left" data-aos-offset="25">
-          <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img
-              src="assets/icon/twitter.png" alt="Twitter" class="w-6 h-6">@savanadigital</div>
-        </a>
+        <h1 class="text-3xl font-bold text-center mb-10">Sosial Media</h1>
+        <div class="grid grid-cols-1 md:grid-cols-3">
+          <a href="#" class="w-full flex justify-center" data-aos="fade-right" data-aos-offset="25">
+            <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg "><img
+                src="assets/icon/instagram.png" alt="Instagram" class="w-6 h-6">@savanadigital</div>
+          </a>
+          <a href="#" class="w-full flex justify-center" data-aos="fade-up" data-aos-offset="25">
+            <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img
+                src="assets/icon/tik-tok.png" alt="Tiktok" class="w-6 h-6">@savanadigital</div>
+          </a>
+          <a href="#" class="w-full flex justify-center" data-aos="fade-left" data-aos-offset="25">
+            <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg"><img
+                src="assets/icon/twitter.png" alt="Twitter" class="w-6 h-6">@savanadigital</div>
+          </a>
+        </div>
       </div>
     </div>
 
