--- a/index.html
+++ b/index.html
@@ -20,47 +20,38 @@
 
 </head>
 
-<body style="scroll-behavior: smooth;">
+<body class="overflow-x-hidden antialiased" style="scroll-behavior: smooth;">
   <div class="container-body">
 
-    <nav class="bg-white border-b border-gray-950 dark:bg-gray-900 fixed z-20 top-0 start-0 w-full">
-      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <!-- Navbar -->
+    <nav id="navbar" class="fixed top-0 left-0 w-full z-50 bg-transparent transition-colors duration-300">
+      <div class="max-w-screen-xl mx-auto flex items-center justify-between p-4">
+        <a href="#" class="flex items-center space-x-3">
           <img src="img/logo.png" class="h-8" alt="Savana Logo" />
-          <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">Savana Digital Studio</span>
+          <span class="text-lg font-semibold text-white">Savana Digital Studio</span>
         </a>
-        <button data-collapse-toggle="navbar-default" type="button"
-          class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-          aria-controls="navbar-default" aria-expanded="false">
-          <span class="sr-only">Open main menu</span>
-          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M1 1h15M1 7h15M1 13h15" />
+        <!-- Mobile toggle -->
+        <button id="nav-toggle" class="md:hidden p-2 text-white focus:outline-none">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
         </button>
-        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-          <ul
-            class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-            <li>
-              <a href="#home"
-                class="block py-2 px-3 text-gray-900 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
-                aria-current="page">Home</a>
-            </li>
-            <li>
-              <a href="#layanan-kami"
-                class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Layanan</a>
-            </li>
-            <li>
-              <a href="#tentang-kami"
-                class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tentang
-                Kami</a>
-            </li>
-            <li>
-              <a href="#kontak"
-                class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Kontak</a>
-            </li>
-          </ul>
+        <!-- Menu -->
+        <div id="nav-menu" class="hidden md:flex space-x-8 items-center">
+          <a href="#home" class="text-white hover:text-gray-300">Home</a>
+          <a href="#layanan-kami" class="text-white hover:text-gray-300">Layanan</a>
+          <a href="#tentang-kami" class="text-white hover:text-gray-300">Tentang Kami</a>
+          <a href="#kontak" class="text-white hover:text-gray-300">Kontak</a>
         </div>
+      </div>
+      <!-- Mobile menu container -->
+      <div id="mobile-menu" class="hidden md:hidden">
+        <ul class="bg-purple-900 px-4 pb-4 space-y-2">
+          <li><a href="#home" class="block py-2 text-white">Home</a></li>
+          <li><a href="#layanan-kami" class="block py-2 text-white">Layanan</a></li>
+          <li><a href="#tentang-kami" class="block py-2 text-white">Tentang Kami</a></li>
+          <li><a href="#kontak" class="block py-2 text-white">Kontak</a></li>
+        </ul>
       </div>
     </nav>
 
@@ -75,7 +66,7 @@
           Untuk Usaha Anda Agar Customer Anda Tertarik</h2>
         <div class="flex justify-center">
           <a href="#layanan-kami"
-            class="!bg-violet-700 border-white border font-medium text-base py-4 px-6 rounded-lg flex items-center gap-2 w-max ">Lihat
+            class="!bg-transparent border-white border font-medium text-base py-4 px-8 rounded-full flex items-center gap-2 w-max ">Lihat
             Detail <img src="assets/icon/next.png" alt="Next Icon"
               class="w-5 h-5 invert brightness-0 animate-bounce md-arrow md:p-1"></a>
         </div>
@@ -397,26 +388,46 @@
 
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
   <script>
-    AOS.init({
-      //once: true, // animasi hanya terjadi sekali
-    });
-    // Ambil elemen toggle dan menu
-    const toggleButton = document.querySelector('[data-collapse-toggle]');
-    const navMenu = document.getElementById('navbar-default');
+    AOS.init();
+    const navbar = document.getElementById('navbar');
+    const navToggle = document.getElementById('nav-toggle');
+    const mobileMenu = document.getElementById('mobile-menu');
 
-    // Toggle menu saat tombol diklik
-    toggleButton.addEventListener('click', function (e) {
+    // Scroll handler
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 25) {
+        navbar.classList.add('bg-purple-900', 'shadow-lg');
+        navbar.classList.remove('bg-transparent', 'shadow-lg');
+      } else {
+        navbar.classList.remove('bg-purple-900', 'shadow-lg');
+      }
+    });
+
+    // Mobile toggle handler
+    navToggle.addEventListener('click', (e) => {
       e.stopPropagation();
-      navMenu.classList.toggle('hidden');
+      const isOpen = mobileMenu.classList.toggle('hidden');
+      if (!isOpen) {
+        // menu opened: ensure navbar stays purple
+        navbar.classList.add('bg-purple-900', 'shadow-lg');
+      } else {
+        // menu closed: revert based on scroll
+        if (window.scrollY < 50) {
+          navbar.classList.remove('bg-purple-900', 'shadow-lg');
+        }
+      }
     });
 
-    // Tutup menu jika klik di luar
-    document.addEventListener('click', function (e) {
-      const isClickInside = navMenu.contains(e.target) || toggleButton.contains(e.target);
-      if (!isClickInside && !navMenu.classList.contains('hidden')) {
-        navMenu.classList.add('hidden');
+    // Click outside to close mobile menu
+    document.addEventListener('click', (e) => {
+      if (!mobileMenu.contains(e.target) && !navToggle.contains(e.target)) {
+        if (!mobileMenu.classList.contains('hidden')) {
+          mobileMenu.classList.add('hidden');
+          if (window.scrollY < 50) {
+            navbar.classList.remove('bg-purple-900', 'shadow-lg');
+          }
+        }
       }
     });
   </script>
