--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         </button>
         <!-- Menu -->
         <div id="nav-menu" class="hidden md:flex space-x-8 items-center">
-          <a href="#home" class="text-white hover:text-gray-300">Home</a>
-          <a href="#layanan-kami" class="text-white hover:text-gray-300">Layanan</a>
-          <a href="#tentang-kami" class="text-white hover:text-gray-300">Tentang Kami</a>
-          <a href="#kontak" class="text-white hover:text-gray-300">Kontak</a>
+          <a href="#home" class="text-white hover:text-gray-300 font-medium">Home</a>
+          <a href="#layanan-kami" class="text-white hover:text-gray-300 font-medium">Layanan</a>
+          <a href="#tentang-kami" class="text-white hover:text-gray-300 font-medium">Tentang Kami</a>
+          <a href="#kontak" class="text-white hover:text-gray-300 font-medium">Kontak</a>
         </div>
       </div>
       <!-- Mobile menu container -->
       <div id="mobile-menu" class="hidden md:hidden">
-        <ul class="bg-purple-900 px-4 pb-4 space-y-2">
+        <ul class="bg-purple-900 px-8 pb-4 space-y-2">
           <li><a href="#home" class="block py-2 text-white">Home</a></li>
           <li><a href="#layanan-kami" class="block py-2 text-white">Layanan</a></li>
           <li><a href="#tentang-kami" class="block py-2 text-white">Tentang Kami</a></li>
